--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,19 +28,19 @@
 
     <!-- Navigation Drawer menu labels -->
     <string name="nav_org">Organization</string>
-    <string name="nav_photos">Photos</string>
-    <string name="nav_movies">Movies</string>
-    <string name="nav_notifications">Notifications</string>
-    <string name="nav_settings">Settings</string>
-    <string name="nav_about_us">About Us</string>
+    <string name="nav_calendar">Calendar</string>
+    <string name="nav_profile">Profile</string>
+    <string name="nav_messages">Messages</string>
+<!--    <string name="nav_settings">Settings</string>-->
+<!--    <string name="nav_about_us">About Us</string>-->
 
     <!-- Toolbar titles when navigation menu item is selected -->
     <string-array name="nav_item_activity_titles">
         <item>Organization</item>
-        <item>Photos</item>
-        <item>Movies</item>
-        <item>Notifications</item>
-        <item>Settings</item>
+        <item>Calendar</item>
+        <item>Messages</item>
+        <item>Profile</item>
+        <!--<item>Settings</item>-->
     </string-array>
 
     <!-- Activities titles -->
@@ -55,5 +55,15 @@
     <string name="item_clicked">"you have clicked on : %1$s"</string>
     <string name="hello_blank_fragment">Hello blank Fragment</string>
 
+<!-- test values -->
+     <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+        deserunt mollit anim id est laborum.
+    </string>
+    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
+    <string name="item_title">Palais Garnier</string>
 
 </resources>
