--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,11 @@
     <string name="select_organization">Select organization</string>
     <string name="select_date">SELECT DATE</string>
     <string name="select_time">SELECT TIME</string>
+    <string name="start_date">start date</string>
+    <string name="start_time">start time</string>
+    <string name="end_date">end date</string>
+    <string name="end_time">end time</string>
+    <string name="checkDates">Invalid Dates , check date and time</string>
 
 
 </resources>
