--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,8 @@
     <string name="end_date">end date</string>
     <string name="end_time">end time</string>
     <string name="checkDates">Invalid Dates , check date and time</string>
+    <string name="select_start">Choose volunteer start date</string>
+    <string name="select_end">Choose end volunteer date</string>
 
 
 </resources>
