finished calendar events and swipe

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,5 +102,6 @@
     <string name="alertPopTitle">Delete</string>
     <string name="alertLblPositive">Delete</string>
     <string name="alertLblNegative">Cancel</string>
+    <string name="zone">Israel</string>
 
 </resources>
