profile org done... working good

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,5 +103,7 @@
     <string name="alertPopTitle">Delete</string>
     <string name="alertLblPositive">Delete</string>
     <string name="alertLblNegative">Cancel</string>
+    <string name="org_profile">org_profile</string>
+    <string name="show_org">Show details</string>
 
 </resources>
